phobosd: check daemon lock file existence before initialization
We prevent launching two daemon instances sharing the same configuration
file by adding a lock file. The daemon checks when starting the
existence of this lock file. For example two daemon instances should not
share the same LRS socket.

A test is added to check this behavior.

Change-Id: If895d500fa2357ef3f9a1b5d8771fa5490bba85c
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/7813
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -13,6 +13,8 @@ families      = tape,dir
 lib_device    = /dev/changer
 # path of the LRS-server socket
 server_socket = /run/phobosd/lrs
+# path of the daemon lock file
+lock_file     = /run/phobosd/phobosd.lock
 
 [scsi]
 # retry count for SCSI requests
