python: port to python3
- add string encodings/decodings
- argparse: subparsers need to be required
- convert assertItemsEqual() into assertCountEqual()
- convert C modules
- convert iterxxx() into xxx()
- convert raw_input() into input()
- convert xrange() into range()
- correct includes (StringIO)
- modify python file shebangs
- update dict view utilization
- update map() utilization (due to new return type)
- update NamedTemporaryFile call (due to python3 str)
- update python requirements (2.7 to 3.6)
- use enum classes (ResourceFamily)
- use setters and getters

Change-Id: Iff6c41114c72257b09c47aee92958f1c6f344aeb
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/7971
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Quentin Bouget <quentin.bouget@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -10,13 +10,13 @@ Source0: %{name}-%{version}.tar.gz
 
 %define phobosdocdir %{_docdir}/%{name}
 
-%define __python /usr/bin/python2
+%define __python /usr/bin/python3
 
 %if 0%{?rhel} >= 8
-%global python_prefix python2
+%global python_prefix python3
 %global postgres_prefix postgresql
 %else
-%global python_prefix python
+%global python_prefix python36
 %global postgres_prefix postgresql94
 %endif
 
@@ -43,7 +43,7 @@ Requires: %{python_prefix}
 %if 0%{?rhel} < 8
 Requires: python-argparse
 %endif
-Requires: %{python_prefix}-yaml
+Requires: %{python_prefix}-PyYAML
 Requires: %{python_prefix}-clustershell
 Requires: %{python_prefix}-psycopg2
 Requires: %{python_prefix}-tabulate
