--- a/src/tests/phobos.conf
+++ b/src/tests/phobos.conf
@@ -18,3 +18,30 @@ drive_rw = LTO5_drive,LTO6_drive
 
 [tape_type "LTO6"]
 drive_rw = LTO6_drive
+
+[alias "full-test"]
+family = dir
+layout = raid1
+tags = foo-tag,bar-tag
+
+[alias "full-tape-test"]
+family = tape
+layout = raid1
+tags = foo-tag,bar-tag
+
+[alias "empty-family-test"]
+layout = raid1
+tags = foo-tag
+
+[alias "empty-layout-test"]
+family = dir
+tags = foo-tag
+
+[alias "empty-tag-test"]
+family = dir
+layout = raid1
+
+[alias "erroneus-tag-test"]
+family = dir
+layout = raid1
+tags = no-tag-1,no-tag-2
