--- a/src/tests/phobos.conf
+++ b/src/tests/phobos.conf
@@ -18,3 +18,8 @@ drive_rw = LTO5_drive,LTO6_drive
 
 [tape_type "LTO6"]
 drive_rw = LTO6_drive
+
+[alias "acceptance-test"]
+family = dir
+layout = raid1
+tags = foo-tag,bar-tag
