fix: missing 1.91 database schema files for build
Change-Id: Ia632f7ecc3fa3c4be14d74d5e88e76a5832193cd
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/7998
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Quentin Bouget <quentin.bouget@cea.fr>

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -24,6 +24,8 @@ EXTRA_DIST=phobos/__init__.py \
 	   phobos/db/sql/1.1/schema.sql \
 	   phobos/db/sql/1.2/drop_schema.sql \
 	   phobos/db/sql/1.2/schema.sql \
+	   phobos/db/sql/1.91/drop_schema.sql \
+	   phobos/db/sql/1.91/schema.sql \
 	   scripts/phobos \
 	   setup.py
 
