media: add operation flags to struct media_info
Change-Id: I256359ad87784f2dbea55b141706366f4ac4f4df
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/8001
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -16,7 +16,7 @@ UNIT_TESTS=test_common test_attrs test_mapper test_log test_cfg test_dev_tape \
 INTEG_TESTS=test_dss.sh test_scsi.sh test_layouts.sh acceptance.sh	\
 	    test_store_retry.sh simple_split.sh raid1_simple_split.sh 	\
 	    raid1_split.sh test_bad_comm.sh test_resource_availability.sh \
-	    test_daemon.sh
+	    test_daemon.sh test_media_operation_flags.sh
 
 TESTS=$(UNIT_TESTS) $(INTEG_TESTS)
 
