dss: add deprecated_object get/set methods
Change-Id: I7e0e6a9dc3ecbdc27ba461ec21ad9f3aee1999ab
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/8091
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/src/common/Makefile.am
+++ b/src/common/Makefile.am
@@ -3,4 +3,4 @@ AM_CFLAGS= $(CC_OPT)
 noinst_LTLIBRARIES=libpho_common.la
 
 libpho_common_la_SOURCES=common.c attrs.c type_utils.c log.c saj.c slist.c
-libpho_common_la_LIBADD=-ljansson
+libpho_common_la_LIBADD=-ljansson -lm
