Add rights for cea-hpc

--- a/project.config
+++ b/project.config
@@ -7,7 +7,7 @@
 	description = Parallel Heterogeneous Object Store
 [access "refs/*"]
 	owner = group user/Thomas Leibovici (tl-cea)
-	owner = group user/Florent Monjalet (fmonjalet)
+    owner = group group/cea-hpc
 [access "refs/for/refs/*"]
 	label-Code-Review = -2..+2 group user/Thomas Leibovici (tl-cea)
 	label-Verified = -1..+1 group user/Thomas Leibovici (tl-cea)
@@ -20,8 +20,9 @@
 	submit = group user/Thomas Leibovici (tl-cea)
 [access "refs/heads/*"]
 	create = group user/Thomas Leibovici (tl-cea)
+	create = group group/cea-hpc
 	push = +force group user/Thomas Leibovici (tl-cea)
-	push = +force group user/Florent Monjalet (fmonjalet)
+	push = +force group group/cea-hpc
 	pushMerge = group user/Thomas Leibovici (tl-cea)
 	read = group user/Thomas Leibovici (tl-cea)
 	label-Verified = -1..+1 group user/CEA-HPC (cea-gerrithub-hpc)
@@ -32,5 +33,9 @@
 	push = +force group user/Thomas Leibovici (tl-cea)
 	pushTag = group user/Thomas Leibovici (tl-cea)
 	pushSignedTag = group user/Thomas Leibovici (tl-cea)
+	push = group group/cea-hpc
+	push = +force group group/cea-hpc
+	pushTag = group group/cea-hpc
+	pushSignedTag = group group/cea-hpc
 [receive]
 	requireChangeId = true
