cli: add 'phobos object delete' command
Change-Id: I7ca03370ebc41963d71e0148c6f4c9c68d1bdb1a
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/8124
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/configure.ac
+++ b/configure.ac
@@ -110,6 +110,7 @@ AC_CONFIG_FILES([Makefile
          src/layout-modules/Makefile
          src/admin/Makefile
          src/tests/Makefile
+         src/tests/integration/Makefile
          src/cli/Makefile
          phobos.spec
 ])
