undelete: add phobos_undelete() into C API
Change-Id: I664c9cb5adbf020fc7fdbc54a6584a875c23c250
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/8192
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -6,7 +6,8 @@ AM_CFLAGS= $(CC_OPT)
 check_PROGRAMS=test_common test_attrs test_mapper test_log test_store	\
 	       test_dss test_cfg test_scsi test_scsi_scan test_dev_tape \
 	       test_ldm test_type_utils test_store_retry test_io \
-	       test_communication test_bad_comm test_store_alias test_delete
+	       test_communication test_bad_comm test_store_alias test_delete \
+	       test_undelete
 
 # 1st step: low level tests
 UNIT_TESTS=test_common test_attrs test_mapper test_log test_cfg test_dev_tape \
@@ -17,7 +18,7 @@ INTEG_TESTS=test_dss.sh test_scsi.sh test_layouts.sh acceptance.sh	\
 	    test_store_retry.sh simple_split.sh raid1_simple_split.sh 	\
 	    raid1_split.sh test_bad_comm.sh test_resource_availability.sh \
 	    test_daemon.sh test_media_operation_flags.sh test_tag_update.sh \
-	    test_delete.sh
+	    test_delete.sh test_undelete.sh
 
 TESTS=$(UNIT_TESTS) $(INTEG_TESTS)
 
@@ -87,6 +88,9 @@ test_store_alias_LDADD=../cfg/libpho_cfg.la ../common/libpho_common.la \
 
 test_delete_SOURCES=test_delete.c
 test_delete_LDADD=../store/libphobos_store.la
+
+test_undelete_SOURCES=test_undelete.c
+test_undelete_LDADD=../store/libphobos_store.la
 
 @VALGRIND_CHECK_RULES@
 VALGRIND_SUPPRESSIONS_FILES=supp-files/valgrind.supp supp-files/glib.supp
