--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -26,6 +26,8 @@ EXTRA_DIST=phobos/__init__.py \
 	   phobos/db/sql/1.2/schema.sql \
 	   phobos/db/sql/1.91/drop_schema.sql \
 	   phobos/db/sql/1.91/schema.sql \
+	   phobos/db/sql/1.92/drop_schema.sql \
+	   phobos/db/sql/1.92/schema.sql \
 	   scripts/phobos \
 	   setup.py
 
