cli: add '--pattern' to 'phobos object list'
Added a flag that lets the user specifies if the search of the
requested resource should be done using a regexp or not.
If given multiple resources, the flag will apply on each of
them, and do a POSIX search for every resource separately.

Change-Id: I247c8be472051782320d2ba90ea9fafa476571cf
Signed-off-by: Yoann Valeri <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/8291
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/src/tests/integration/Makefile.am
+++ b/src/tests/integration/Makefile.am
@@ -1,3 +1,3 @@
 AM_CFLAGS=$(CC_OPT)
 
-TESTS=test_delete.sh test_undelete.sh test_put.sh
+TESTS=test_delete.sh test_undelete.sh test_put.sh test_object_list.sh
