--- a/src/dss/Makefile.am
+++ b/src/dss/Makefile.am
@@ -2,6 +2,6 @@ AM_CFLAGS= $(CC_OPT)
 
 noinst_LTLIBRARIES=libpho_dss.la
 
-libpho_dss_la_SOURCES=dss.c
+libpho_dss_la_SOURCES=dss.c dss_lock.c dss_utils.c dss_utils.h
 libpho_dss_la_CFLAGS=${LIBPQ_CFLAGS} ${AM_CFLAGS}
 libpho_dss_la_LIBADD=${LIBPQ_LIBS}
