cli: implementation of the ping feature
Add the ping command to the CLI for admin users. Add the
phobos_admin_ping() in the API which sends a request to
the daemon to see if it is online. Add the capacity to
respond to a ping request in the daemon.

Change-Id: I213b5c40ae50574591f4c0a17a04df42cad53803
Signed-off-by: Guillaume COURRIER <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/8405
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/src/tests/unit/Makefile.am
+++ b/src/tests/unit/Makefile.am
@@ -1,10 +1,13 @@
 AM_CFLAGS=$(CC_OPT) @CMOCKA_CFLAGS@
 AM_LDFLAGS=@CMOCKA_LIBS@
 
-TESTS=test_dss_lock
+TESTS=test_dss_lock test_ping
 check_PROGRAMS=$(TESTS)
 
 test_dss_lock_SOURCES=test_dss_lock.c
 test_dss_lock_LDADD=../../dss/libpho_dss.la ../../cfg/libpho_cfg.la \
                     ../../common/libpho_common.la
 
+test_ping_SOURCES=test_ping.c mock_communication.c
+test_ping_LDADD=../../admin/libphobos_admin.la ../../dss/libpho_dss.la \
+                ../../common/libpho_common.la ../../ldm/libpho_ldm.la
