--- a/src/admin/Makefile.am
+++ b/src/admin/Makefile.am
@@ -3,7 +3,7 @@ AM_LDFLAGS=-Wl,-rpath=$(libdir) -Wl,-rpath=$(pkglibdir)
 
 lib_LTLIBRARIES=libphobos_admin.la
 
-libphobos_admin_la_SOURCES=admin.c
+libphobos_admin_la_SOURCES=admin.c admin_utils.h
 libphobos_admin_la_LIBADD=../dss/libpho_dss.la ../cfg/libpho_cfg.la \
 			  ../common/libpho_common.la \
 			  ../communication/libpho_comm.la \
