test: add integration test for overwrite feature
Change-Id: I30aef0b3193d49f99a81f845d17a5e57ff7c4d44
Signed-off-by: Yoann Valeri <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/8446
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>

--- a/src/tests/integration/Makefile.am
+++ b/src/tests/integration/Makefile.am
@@ -1,4 +1,4 @@
 AM_CFLAGS=$(CC_OPT)
 
 TESTS=test_delete.sh test_undelete.sh test_put.sh test_object_list.sh \
-      test_extent_list.sh test_ping.sh
+      test_extent_list.sh test_ping.sh test_overwrite.sh
