store: phobos_locate
We add the phobos_locate call to the phobos_store.h API.

This call retrieves the hostname from which a given object is
available. We could then execute a phobos_get on this hostname.

This call is implemented by calling a new layout_locate call which
looks at the media hosting extents of an object.

Change-Id: I1b8a7c0527a6570e39630231f8297462fdd206ce
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/8485
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>

--- a/src/tests/integration/Makefile.am
+++ b/src/tests/integration/Makefile.am
@@ -1,4 +1,11 @@
-AM_CFLAGS=$(CC_OPT)
+AM_CFLAGS=$(CC_OPT) @CMOCKA_CFLAGS@
+AM_LDFLAGS=@CMOCKA_LIBS@
+
+check_PROGRAMS=test_locate
+noinst_PROGRAMS=$(check_PROGRAMS)
 
 TESTS=test_delete.sh test_undelete.sh test_put.sh test_object_list.sh \
-      test_extent_list.sh test_ping.sh test_overwrite.sh
+      test_extent_list.sh test_ping.sh test_overwrite.sh test_locate.sh
+
+test_locate_SOURCES=test_locate.c
+test_locate_LDADD=../../store/libphobos_store.la ../../dss/libpho_dss.la
