raid1, cfg: add configurable block size for writing
Change-Id: Ief0806c52ce8dd38e2f2314aba38159271d388bb
Signed-off-by: Yoann Valeri <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/8483
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -44,6 +44,16 @@ default_layout = simple
 # default resource family for put operations
 default_family = tape
 
+[io]
+# block size used for writing data to multiple media (negative values or 0 will
+# be interpreted as an absence of parameter, and the use of default value
+# sysconf(_SC_PAGESIZE))
+io_block_size = -1
+
+[layout_raid1]
+# number of data replicates for raid1 layout (default is 2)
+repl_count = 2
+
 ######### Tape/drive support and compatibility rules ########
 # You should not modify the following configuration unless:
 #  * You want to add support for a new device or tape model
