store: dss_lazy_find_object
This store internal function allows to find an existing object
by providing uncomplete pieces of info among OID, UUID and version.

This function is lazy because there is no use of any lock and the
returned existing object could change or disappear anytime.

Change-Id: I7afa7d5b432443ed7d9a292be18dac256d8d64e9
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/8676
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>

--- a/src/tests/unit/Makefile.am
+++ b/src/tests/unit/Makefile.am
@@ -1,7 +1,8 @@
 AM_CFLAGS=$(CC_OPT) @CMOCKA_CFLAGS@
 AM_LDFLAGS=@CMOCKA_LIBS@
 
-TESTS=test_dss_lock test_dss_object_move test_ping test_store_object_md
+TESTS=test_dss_lock test_dss_object_move test_ping test_dss_lazy_find_object \
+      test_store_object_md
 check_PROGRAMS=$(TESTS)
 
 noinst_PROGRAMS=$(check_PROGRAMS)
@@ -21,3 +22,8 @@ test_ping_LDADD=../../admin/libphobos_admin.la ../../dss/libpho_dss.la \
 
 test_store_object_md_SOURCES=test_store_object_md.c
 test_store_object_md_LDADD=../../store/libphobos_store.la
+
+test_dss_lazy_find_object_SOURCES=test_dss_lazy_find_object.c test_setup.c
+test_dss_lazy_find_object_LDADD=../../dss/libpho_dss.la \
+                                ../../cfg/libpho_cfg.la \
+                                ../../common/libpho_common.la
