test: cmocka global DSS handle setup and teardown
Change-Id: I7a59f7ad5d9a373a0a5175562d38f55071c7a0f9
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/8677
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/src/tests/unit/Makefile.am
+++ b/src/tests/unit/Makefile.am
@@ -4,11 +4,14 @@ AM_LDFLAGS=@CMOCKA_LIBS@
 TESTS=test_dss_lock test_dss_object_move test_ping test_store_object_md
 check_PROGRAMS=$(TESTS)
 
-test_dss_lock_SOURCES=test_dss_lock.c
+noinst_PROGRAMS=$(check_PROGRAMS)
+noinst_HEADERS=test_setup.h
+
+test_dss_lock_SOURCES=test_dss_lock.c test_setup.c
 test_dss_lock_LDADD=../../dss/libpho_dss.la ../../cfg/libpho_cfg.la \
                     ../../common/libpho_common.la
 
-test_dss_object_move_SOURCES=test_dss_object_move.c
+test_dss_object_move_SOURCES=test_dss_object_move.c test_setup.c
 test_dss_object_move_LDADD=../../dss/libpho_dss.la ../../cfg/libpho_cfg.la \
                            ../../common/libpho_common.la
 
