pkg: update to 1.91.2
Change-Id: I54beaa32cfde188ab7a6f03610f4babc46cbb64e
Signed-off-by: Yoann Valeri <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/8692
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -113,6 +113,15 @@ rm -f $RPM_BUILD_ROOT/%{_libdir}/phobos/libpho_layout_*.la
 %{_libdir}/libphobos_admin.la
 
 %changelog
+* Mon May 17 2021 - Yoann Valeri <yoann.valeri@cea.fr> - 1.91.2-1
+- Modified concurrency lock management in DSS
+- Modified DB schema
+- Pattern option to extent and object list
+- Ping command
+- Configurable block size when writing data
+- Put overwrite
+- Added phobos locate command's design documentation
+
 * Wed Mar 3 2021 - Sebastien Gougeaud <sebastien.gougeaud@cea.fr> - 1.91.1-1
 - Delete and undelete commands for objects
 - Extent path generation now considers uuid and version of objects
