dss: dss_medium_locate
This function mutualizes the search of an existing hostname lock
for a medium between simple and raid1 layout.

This function will be a bluiding block for improving raid1 layout
locate to take into account split objects when media have not
enough place to store one global extent.

Change-Id: I2b634b3ed465655d9b9257532392b8d745abaef6
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/8693
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>

--- a/src/tests/unit/Makefile.am
+++ b/src/tests/unit/Makefile.am
@@ -2,7 +2,7 @@ AM_CFLAGS=$(CC_OPT) @CMOCKA_CFLAGS@
 AM_LDFLAGS=@CMOCKA_LIBS@
 
 TESTS=test_dss_lock test_dss_object_move test_ping test_dss_lazy_find_object \
-      test_store_object_md
+      test_store_object_md test_dss_medium_locate
 check_PROGRAMS=$(TESTS)
 
 noinst_PROGRAMS=$(check_PROGRAMS)
@@ -27,3 +27,7 @@ test_dss_lazy_find_object_SOURCES=test_dss_lazy_find_object.c test_setup.c
 test_dss_lazy_find_object_LDADD=../../dss/libpho_dss.la \
                                 ../../cfg/libpho_cfg.la \
                                 ../../common/libpho_common.la
+
+test_dss_medium_locate_SOURCES=test_dss_medium_locate.c test_setup.c
+test_dss_medium_locate_LDADD=../../dss/libpho_dss.la ../../cfg/libpho_cfg.la \
+                             ../../common/libpho_common.la
