tests: unit test for object_md_save()
Change-Id: I6d1dc4d92a07912d51371d65997c831dbabc421e
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/8700
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/src/tests/unit/Makefile.am
+++ b/src/tests/unit/Makefile.am
@@ -1,7 +1,7 @@
 AM_CFLAGS=$(CC_OPT) @CMOCKA_CFLAGS@
 AM_LDFLAGS=@CMOCKA_LIBS@
 
-TESTS=test_dss_lock test_dss_object_move test_ping
+TESTS=test_dss_lock test_dss_object_move test_ping test_store_object_md
 check_PROGRAMS=$(TESTS)
 
 test_dss_lock_SOURCES=test_dss_lock.c
@@ -15,3 +15,6 @@ test_dss_object_move_LDADD=../../dss/libpho_dss.la ../../cfg/libpho_cfg.la \
 test_ping_SOURCES=test_ping.c mock_communication.c
 test_ping_LDADD=../../admin/libphobos_admin.la ../../dss/libpho_dss.la \
                 ../../common/libpho_common.la ../../ldm/libpho_ldm.la
+
+test_store_object_md_SOURCES=test_store_object_md.c
+test_store_object_md_LDADD=../../store/libphobos_store.la
