cli: add support for uuid and version in get command
Add optional '--version' and '--uuid' arguments to get
deprecated objects. Without version and uuid, get only
queries the object table. If uuid is specified but not
version, it gets the most recent object.

Change-Id: I98cbe635cffdaf09f8346cfc6cbe6ff63085b938
Signed-off-by: Courrier Guillaume <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/8720
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/src/tests/integration/Makefile.am
+++ b/src/tests/integration/Makefile.am
@@ -12,7 +12,8 @@ TEST_EXTENSIONS=.sh
 check_PROGRAMS=test_locate medium_locker
 
 check_SCRIPTS=test_delete.sh test_undelete.sh test_put.sh test_object_list.sh \
-	          test_extent_list.sh test_ping.sh test_overwrite.sh test_locate.sh
+	          test_extent_list.sh test_ping.sh test_overwrite.sh \
+	          test_locate.sh test_get.sh
 
 TESTS=$(check_SCRIPTS)
 
