test: integrate test_scsi_scan.c core function in test_scsi.c
This patch adds test_scsi_scan.c's core function into test_scsi.c,
in order to now be properly tested, and remove test_scsi_scan.c.
Before this, the file was always compiled, but never actually
used, resulting in dead code.
Also mutualize a few parts of the code.

Change-Id: I2b5e28b5fc82e780ed6c38061e362636eeb34ff1
Signed-off-by: Yoann Valeri <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/8777
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -5,7 +5,7 @@ AM_LDFLAGS=@CMOCKA_LIBS@
 # 1) build check_PROGRAMS
 # 2) run TESTS and generate a summary
 check_PROGRAMS=test_common test_attrs test_mapper test_log test_store	\
-	       test_dss test_cfg test_scsi test_scsi_scan test_dev_tape \
+	       test_dss test_cfg test_scsi test_dev_tape \
 	       test_ldm test_type_utils test_store_retry test_io \
 	       test_communication test_bad_comm test_store_alias test_delete \
 	       test_undelete test_raid1_split_locate
@@ -64,9 +64,6 @@ test_cfg_LDADD=../cfg/libpho_cfg.la ../common/libpho_common.la
 
 test_scsi_SOURCES=test_scsi.c
 test_scsi_LDADD=../ldm/libpho_ldm.la ../cfg/libpho_cfg.la ../common/libpho_common.la
-
-test_scsi_scan_SOURCES=test_scsi_scan.c
-test_scsi_scan_LDADD=../ldm/libpho_ldm.la ../cfg/libpho_cfg.la ../common/libpho_common.la
 
 test_dev_tape_SOURCES=test_dev_tape.c
 test_dev_tape_LDADD=../ldm/libpho_ldm.la ../cfg/libpho_cfg.la ../common/libpho_common.la
