phobos_admin: phobos_admin_medium_locate
Change-Id: I9f19cf95be29eead3e5befe3bbab87bcd2307cdc
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/8780
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>

--- a/src/tests/unit/Makefile.am
+++ b/src/tests/unit/Makefile.am
@@ -2,7 +2,8 @@ AM_CFLAGS=$(CC_OPT) @CMOCKA_CFLAGS@
 AM_LDFLAGS=@CMOCKA_LIBS@
 
 TESTS=test_dss_lock test_dss_object_move test_ping test_dss_lazy_find_object \
-      test_store_object_md test_dss_medium_locate
+      test_store_object_md test_dss_medium_locate \
+      test_phobos_admin_medium_locate
 check_PROGRAMS=$(TESTS)
 
 noinst_PROGRAMS=$(check_PROGRAMS)
@@ -31,3 +32,11 @@ test_dss_lazy_find_object_LDADD=../../dss/libpho_dss.la \
 test_dss_medium_locate_SOURCES=test_dss_medium_locate.c test_setup.c
 test_dss_medium_locate_LDADD=../../dss/libpho_dss.la ../../cfg/libpho_cfg.la \
                              ../../common/libpho_common.la
+
+test_phobos_admin_medium_locate_SOURCES=test_phobos_admin_medium_locate.c \
+                                        test_setup.c
+test_phobos_admin_medium_locate_LDADD=../../admin/libphobos_admin.la \
+                                      ../../dss/libpho_dss.la \
+                                      ../../cfg/libpho_cfg.la \
+                                      ../../common/libpho_common.la \
+                                      ../../ldm/libpho_ldm.la
