cli: add tape/dir locate
Change-Id: Id58ef09eac4f567199c98b17d088aa9e507f1e52
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/8784
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/src/tests/integration/Makefile.am
+++ b/src/tests/integration/Makefile.am
@@ -1,7 +1,7 @@
 AM_CFLAGS=$(CC_OPT) @CMOCKA_CFLAGS@
 AM_LDFLAGS=@CMOCKA_LIBS@
 
-check_PROGRAMS=test_locate
+check_PROGRAMS=test_locate medium_locker
 noinst_PROGRAMS=$(check_PROGRAMS)
 
 TESTS=test_delete.sh test_undelete.sh test_put.sh test_object_list.sh \
@@ -9,3 +9,6 @@ TESTS=test_delete.sh test_undelete.sh test_put.sh test_object_list.sh \
 
 test_locate_SOURCES=test_locate.c
 test_locate_LDADD=../../store/libphobos_store.la ../../dss/libpho_dss.la
+
+medium_locker_SOURCES=medium_locker.c
+medium_locker_LDADD=../../dss/libpho_dss.la ../../store/libphobos_store.la
